@@ -7,9 +7,7 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.MockitoAnnotations;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.data.web.PageableHandlerMethodArgumentResolver;
 import org.springframework.http.MediaType;
-import org.springframework.http.converter.json.MappingJackson2HttpMessageConverter;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.transaction.annotation.Transactional;
 import uk.gov.hmcts.reform.em.annotation.Application;
@@ -22,8 +20,6 @@ import uk.gov.hmcts.reform.em.annotation.domain.Tag;
 import uk.gov.hmcts.reform.em.annotation.domain.enumeration.AnnotationType;
 import uk.gov.hmcts.reform.em.annotation.repository.AnnotationRepository;
 import uk.gov.hmcts.reform.em.annotation.repository.TagRepository;
-import uk.gov.hmcts.reform.em.annotation.rest.errors.ExceptionTranslator;
-import uk.gov.hmcts.reform.em.annotation.service.AnnotationSetService;
 import uk.gov.hmcts.reform.em.annotation.service.dto.AnnotationDTO;
 import uk.gov.hmcts.reform.em.annotation.service.mapper.AnnotationMapper;
 
@@ -61,22 +57,10 @@ class AnnotationResourceIntTest extends BaseTest {
     private AnnotationRepository annotationRepository;
 
     @Autowired
-    private AnnotationSetService annotationSetService;
-
-    @Autowired
     private TagRepository tagRepository;
 
     @Autowired
     private AnnotationMapper annotationMapper;
-
-    @Autowired
-    private MappingJackson2HttpMessageConverter jacksonMessageConverter;
-
-    @Autowired
-    private PageableHandlerMethodArgumentResolver pageableArgumentResolver;
-
-    @Autowired
-    private ExceptionTranslator exceptionTranslator;
 
     @Autowired
     private EntityManager em;
@@ -308,7 +292,7 @@ class AnnotationResourceIntTest extends BaseTest {
         // Validate the Annotation in the database
         List<Annotation> annotationList = annotationRepository.findAll();
         assertThat(annotationList).hasSize(databaseSizeBeforeUpdate);
-        Annotation testAnnotation = annotationList.get(annotationList.size() - 1);
+        Annotation testAnnotation = annotationList.getLast();
         assertThat(testAnnotation.getAnnotationType()).isEqualTo(UPDATED_ANNOTATION_TYPE.toString());
         assertThat(testAnnotation.getPage()).isEqualTo(UPDATED_PAGE);
     }
